wip - change translate to use data-use.json
